<!--
  Copyright (c) 2014 Kinvey Inc.
  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/ghost_white"
                tools:context=".LoginActivity" >

    <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_spacing"
            android:clickable="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/kinvey_orange" />

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etPassword"
            android:layout_below="@+id/tvErrorMessage"
            android:layout_marginLeft="@dimen/button_margin"
            android:background="@color/kinvey_orange"
            android:minWidth="@dimen/button_min_width"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/ghost_white" />

    <Button
            android:id="@+id/btnRegisterAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/etEmailLogin"
            android:layout_below="@+id/tvErrorMessage"
            android:layout_marginRight="@dimen/button_margin"
            android:background="@color/kinvey_orange"
            android:minWidth="@dimen/button_min_width"
            android:onClick="registerAccount"
            android:text="@string/register"
            android:textColor="@color/ghost_white" />

    <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etEmailLogin"
            android:layout_below="@+id/etEmailLogin"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/ebony"
            android:textColorHint="@color/hint_color" />

    <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_spacing"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/ebony"
            android:textColorHint="@color/hint_color" />

    <ImageButton
            android:id="@+id/btnLoginTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegisterAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/login_twitter"
            android:onClick="launchTwitterLogin"
            android:src="@drawable/sign_in_twitter" />

    <ImageButton
            android:id="@+id/btnLoginFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnLoginTwitter"
            android:layout_below="@+id/btnLoginTwitter"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/login_facebook"
            android:onClick="launchFacebookLogin"
            android:src="@drawable/sign_in_facebook" />

    <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btnLoginTwitter"
            android:layout_alignRight="@id/btnLoginTwitter"
            android:layout_below="@+id/btnLoginFacebook"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/login_google"
            android:textColor="#000000"
            android:text="@string/login_google"
            android:onClick="launchGoogleLogin" />

    <Button
            android:id="@+id/btnLoginLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btnLoginTwitter"
            android:layout_alignRight="@id/btnLoginTwitter"
            android:layout_below="@+id/btnLoginGoogle"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/login_linkedin"
            android:textColor="#000000"
            android:text="@string/login_linkedin"
            android:onClick="launchLinkedInLogin" />

</RelativeLayout>

</ScrollView>